--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Initial Catalog=SeniorFoodOrderSystemDatabase; Data Source=localhost; Persist Security Info=True;User ID=sa;Password=Qwe123@a;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+    "Token": "senior food order system nus iss assignment team 38 secret key 20230827"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
