--- a/SeniorFoodOrderSystem_BackEnd_Food_Menu_Enquiry/SeniorFoodOrderSystem_BackEnd_Food_Menu_Enquiry.csproj
+++ b/SeniorFoodOrderSystem_BackEnd_Food_Menu_Enquiry/SeniorFoodOrderSystem_BackEnd_Food_Menu_Enquiry.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>02e88395-b985-41d6-ace4-9750cab2252e</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
